--- a/qt_project/finance/finance.ui
+++ b/qt_project/finance/finance.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>580</width>
-    <height>200</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,7 +19,7 @@
   <property name="maximumSize">
    <size>
     <width>580</width>
-    <height>200</height>
+    <height>450</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -445,6 +445,178 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout"/>
   </widget>
+  <widget class="QGroupBox" name="groupBox_4">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>220</y>
+     <width>561</width>
+     <height>221</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="title">
+    <string>等差加仓法资金量计算</string>
+   </property>
+   <widget class="QLabel" name="labelIncomeSrc_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>首期金额：</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="inputFirst">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>30</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string extracomment="0.00">0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelIncomeSrc_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>递增金额：</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="inputIncrease">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>60</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string extracomment="0.00">0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelIncomeTime_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>投资期数：</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="inputCnt">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>90</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string extracomment="0.00">0</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnTotalMoney">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>计算</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textMoney">
+    <property name="geometry">
+     <rect>
+      <x>255</x>
+      <y>20</y>
+      <width>301</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
   <zorder>layoutWidget</zorder>
   <zorder>groupBox_3</zorder>
   <zorder>groupBox</zorder>
@@ -466,6 +638,7 @@
   <zorder>inputFuliDest</zorder>
   <zorder>btnCalcRate</zorder>
   <zorder>btnCalcFuli</zorder>
+  <zorder>groupBox_4</zorder>
  </widget>
  <resources>
   <include location="../resources.qrc"/>
