Dev V1.19.0 Add 拷贝喜爱文件
Signed-off-by: RockyChing <zdh1021680772@163.com>

--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -193,6 +193,7 @@
     <addaction name="actionFileNew"/>
     <addaction name="actionFileRename"/>
     <addaction name="actionFileSync"/>
+    <addaction name="actionFilePick"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -378,6 +379,11 @@
   <action name="actionImageWBRevert">
    <property name="text">
     <string>黑白图片反色</string>
+   </property>
+  </action>
+  <action name="actionFilePick">
+   <property name="text">
+    <string>文件挑选(&amp;P)</string>
    </property>
   </action>
  </widget>
