--- a/qt_project/finance/returncal.ui
+++ b/qt_project/finance/returncal.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Finance</class>
- <widget class="QWidget" name="Finance">
+ <class>ReturnCal</class>
+ <widget class="QDialog" name="ReturnCal">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>580</width>
-    <height>450</height>
+    <height>200</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,11 +19,11 @@
   <property name="maximumSize">
    <size>
     <width>580</width>
-    <height>450</height>
+    <height>200</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>金融理财</string>
+   <string>收益计算器</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources.qrc">
@@ -445,178 +445,6 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout"/>
   </widget>
-  <widget class="QGroupBox" name="groupBox_4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>220</y>
-     <width>561</width>
-     <height>221</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="title">
-    <string>等差加仓法资金量计算</string>
-   </property>
-   <widget class="QLabel" name="labelIncomeSrc_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>81</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>首期金额：</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputFirst">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>30</y>
-      <width>151</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="toolTip">
-     <string/>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string extracomment="0.00">0</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="labelIncomeSrc_3">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>81</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>递增金额：</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputIncrease">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>60</y>
-      <width>151</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="toolTip">
-     <string/>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string extracomment="0.00">0</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="labelIncomeTime_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>90</y>
-      <width>81</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>投资期数：</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputCnt">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>90</y>
-      <width>151</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="toolTip">
-     <string/>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string extracomment="0.00">0</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnTotalMoney">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>120</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>计算</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textMoney">
-    <property name="geometry">
-     <rect>
-      <x>255</x>
-      <y>20</y>
-      <width>301</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
   <zorder>layoutWidget</zorder>
   <zorder>groupBox_3</zorder>
   <zorder>groupBox</zorder>
@@ -638,7 +466,6 @@
   <zorder>inputFuliDest</zorder>
   <zorder>btnCalcRate</zorder>
   <zorder>btnCalcFuli</zorder>
-  <zorder>groupBox_4</zorder>
  </widget>
  <resources>
   <include location="../resources.qrc"/>
