Dev V1.21.1 Optimize filepickdlg
Signed-off-by: RockyChing <zdh1021680772@163.com>

--- a/qt_project/edit/filepickdlg.ui
+++ b/qt_project/edit/filepickdlg.ui
@@ -77,7 +77,7 @@
         </font>
        </property>
        <property name="placeholderText">
-        <string>必填</string>
+        <string>文件编码：UTF-8</string>
        </property>
       </widget>
      </item>
